<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CourtCounter</string>

    <!-- User input for countdown timer [CHAR LIMIT=20] -->
    <string name="edit_text_input">minutes (max 60)</string>

    <!-- Countdown timer start button [CHAR LIMIT=20] -->
    <string name="timer_start_button">Start</string>

    <!-- Countdown timer reset button [CHAR LIMIT=20] -->
    <string name="timer_reset_button">Reset</string>

    <!-- Pun header of app [CHAR LIMIT=NONE] -->
    <string name="pun_header">Don\'t be the rebound, be the 3-pointer from half court</string>

    <!-- 3-pointer header [CHAR LIMIT=20] -->
    <string name="three_points">3-pointer</string>

    <!-- 2-pointer header [CHAR LIMIT=20] -->
    <string name="two_points">2</string>

    <!-- 1-pointer header [CHAR LIMIT=20] -->
    <string name="one_point">1</string>

    <!-- Game reset button [CHAR LIMIT=20] -->
    <string name="game_reset_button">Reset</string>

</resources>
