<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLength="4"
        android:hint="@string/edit_text_input"
        android:id="@+id/edit_text_input"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/timer_start_button"
        android:id="@+id/button_start_pause_resume"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/timer_reset_button"
        android:id="@+id/button_reset"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text=""
        android:gravity="center"
        android:textSize="35sp"
        android:id="@+id/text_view_countdown"/>

</LinearLayout>