<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:paddingTop="16dp"
        android:src="@drawable/gsw_logo" />

    <TextView
        android:id="@+id/team_b_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:paddingBottom="24dp"
        android:text="0"
        android:textColor="#000000"
        android:textSize="60sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ball"
                android:onClick="addScoreForTeamB"
                android:paddingBottom="8dp"
                android:tag="3"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ball"
                android:onClick="addScoreForTeamB"
                android:paddingBottom="8dp"
                android:tag="3"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ball"
                android:onClick="addScoreForTeamB"
                android:paddingBottom="8dp"
                android:tag="3"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/three_points"
            android:textAllCaps="true"
            android:textSize="27sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ball"
                android:onClick="addScoreForTeamB"
                android:paddingBottom="8dp"
                android:tag="2"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ball"
                android:onClick="addScoreForTeamB"
                android:paddingBottom="8dp"
                android:tag="2"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/two_points"
            android:textAllCaps="true"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ball"
                android:onClick="addScoreForTeamB"
                android:paddingBottom="8dp"
                android:tag="1"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/one_point"
            android:textAllCaps="true"
            android:textSize="35sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>